Avni|BAH|4970|Use Collections.emptyList() for Java compatibility